discussion/kv_engine/164172/164172_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49040: toy-build

squashed all current patches

Change-Id: I61c94c2f4f560a2fd58f6fa24a4b70d8311bec6f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-23 21:10:23.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-23 21:41:52.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41346/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
..\kv_engine\engines\ep\tests\module_tests\collections\manifest_test.cc(977): error: Expected equality of these values:
  123456
  scope->second.dataLimit.value_or(1)
    Which is: 120
[  FAILED  ] ManifestTest.scopeDataSize (0 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41346/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13631/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/collections/vbucket_manifest_scope_entry.h b/engines/ep/src/collections/vbucket_manifest_scope_entry.h
index d745623cd..32f5fa5d1 100644
--- a/engines/ep/src/collections/vbucket_manifest_scope_entry.h
+++ b/engines/ep/src/collections/vbucket_manifest_scope_entry.h
@@ -15,8 +15,7 @@
 
 #include &lt;platform/non_negative_counter.h&gt;
 
-namespace Collections {
-namespace VB {
+namespace Collections::VB {
 
 /**
  * The Collections::VB::ScopeEntry stores the data a scope needs per vbucket
@@ -73,5 +72,4 @@ private:
 
 std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const ScopeEntry&amp; scopeEntry);
 
-} // namespace VB
 } // namespace Collections
\ No newline at end of file
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13631/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_scope_entry.h:18:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace Collections {
^~~~~~~~~~~~~~~~~~~~~~~
namespace Collections::VB
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_scope_entry.h:18:1: note: FIX-IT applied suggested code changes
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_scope_entry.h:76:1: note: FIX-IT applied suggested code changes
} // namespace VB
^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/collections/vbucket_manifest_scope_entry.h b/engines/ep/src/collections/vbucket_manifest_scope_entry.h
index d745623cd..32f5fa5d1 100644
--- a/engines/ep/src/collections/vbucket_manifest_scope_entry.h
+++ b/engines/ep/src/collections/vbucket_manifest_scope_entry.h
@@ -15,8 +15,7 @@
 
 #include &lt;platform/non_negative_counter.h&gt;
 
-namespace Collections {
-namespace VB {
+namespace Collections::VB {
 
 /**
  * The Collections::VB::ScopeEntry stores the data a scope needs per vbucket
@@ -73,5 +72,4 @@ private:
 
 std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const ScopeEntry&amp; scopeEntry);
 
-} // namespace VB
 } // namespace Collections
\ No newline at end of file
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13631/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16193/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
[2021-10-23T21:13:23.055Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:977: Failure
[2021-10-23T21:13:23.055Z] Expected equality of these values:
[2021-10-23T21:13:23.055Z]   123456
[2021-10-23T21:13:23.055Z]   scope->second.dataLimit.value_or(1)
[2021-10-23T21:13:23.055Z]     Which is: 120
[2021-10-23T21:13:23.055Z] [  FAILED  ] ManifestTest.scopeDataSize (1 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14406/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
[2021-10-23T21:18:51.669Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:977: Failure
[2021-10-23T21:18:51.669Z] Expected equality of these values:
[2021-10-23T21:18:51.669Z]   123456
[2021-10-23T21:18:51.669Z]   scope->second.dataLimit.value_or(1)
[2021-10-23T21:18:51.669Z]     Which is: 120
[2021-10-23T21:18:51.669Z] [  FAILED  ] ManifestTest.scopeDataSize (0 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14406/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15522/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
[2021-10-23T21:17:56.964Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:977: Failure
[2021-10-23T21:17:56.964Z] Expected equality of these values:
[2021-10-23T21:17:56.964Z]   123456
[2021-10-23T21:17:56.964Z]   scope->second.dataLimit.value_or(1)
[2021-10-23T21:17:56.964Z]     Which is: 120
[2021-10-23T21:17:56.964Z] [  FAILED  ] ManifestTest.scopeDataSize (0 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15522/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15522/ )

Test exceeded the timeout:
[2021-10-23T21:18:01.132Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15522/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15243/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
[2021-10-23T21:18:14.965Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:977: Failure
[2021-10-23T21:18:14.965Z] Expected equality of these values:
[2021-10-23T21:18:14.965Z]   123456
[2021-10-23T21:18:14.965Z]   scope->second.dataLimit.value_or(1)
[2021-10-23T21:18:14.965Z]     Which is: 120
[2021-10-23T21:18:14.965Z] [  FAILED  ] ManifestTest.scopeDataSize (0 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15243/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15243/ )

Test exceeded the timeout:
[2021-10-23T21:18:19.603Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15243/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23575/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3334/ : FAILURE

Failure of GoogleTest "ManifestTest.scopeDataSize":

<pre>
[ RUN      ] ManifestTest.scopeDataSize
[2021-10-23T21:18:00.347Z] ../kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:977: Failure
[2021-10-23T21:18:00.347Z] Expected equality of these values:
[2021-10-23T21:18:00.347Z]   123456
[2021-10-23T21:18:00.347Z]   scope->second.dataLimit.value_or(1)
[2021-10-23T21:18:00.347Z]     Which is: 120
[2021-10-23T21:18:00.347Z] [  FAILED  ] ManifestTest.scopeDataSize (0 ms)
ManifestTest.scopeDataSize
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3334/ )

Test exceeded the timeout:
[2021-10-23T21:19:22.121Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3334/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35117/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12430/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3264/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2021-10-26 13:21:34.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
